--- a/sass/site/header/_header-main.scss
+++ b/sass/site/header/_header-main.scss
@@ -201,6 +201,7 @@ li.ast-masthead-custom-menu-items {
 	a {
 		padding-left: 0;
 		padding-right: 0;
+		vertical-align: middle;
 	}
 	a,
 	a:hover,
